# data2viz

./: README.md
data2viz/: MANIFEST.in  README.md  __init__.py  data_import.py  export.py  plugins.py  requirements.txt  setup.cfg  setup.py  templates.py  visualization.py  widgets.py
data2viz/tests/: test_data_import.py  test_export.py  test_plugins.py  test_templates.py  test_visualization.py  test_widgets.py
