[metadata]
name = data2viz
version = 0.1.0
description = A library for data visualization and interactive widgets
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/data2viz

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.1.0
    plotly>=5.0.0
    ipywidgets>=7.0.0
    SQLAlchemy>=1.3.0

[options.extras_require]
dev =
    pytest
    sphinx
    wheel

[options.package_data]
* = *.md, *.txt

[options.packages.find]
exclude =
    tests
